# polyxios

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: build_docs.yml  check_format.yml  precommit_update.yml  release.yml  test.yml
.spin/: cmds.py
docs/: conf.py  development.rst  index.rst  usage.rst
examples/: read_multiblock_vtp.py  read_parallel_vtk.py  render_fetched_model.py  visualize_mesh.py  visualize_vtk.py
polyxios/: __init__.py  cli.py  fetcher.py  helper.py  meson.build
polyxios/codecs/: _dolfin.py  _meshb.py  _ply.py  _pvti.py  _pvtp.py  _pvtr.py  _pvts.py  _pvtu.py  _stl.py  _vtk.py  _vtm.py  _wkt.py  meson.build
tests/: test_cli.py  test_codecs_fetcher.py  test_transforms.py
tests/codecs/: test_dolfin.py  test_meshb.py  test_stl.py  test_vtk.py  test_vtk_meta.py  test_wkt.py
